Fix gaps for variation and parent product actions

--- a/plugins/woocommerce-admin/client/products/product-form-actions.scss
+++ b/plugins/woocommerce-admin/client/products/product-form-actions.scss
@@ -6,7 +6,7 @@ $gutenberg-blue-darker: var(--wp-admin-theme-color-darker-20);
 	flex-direction: row;
 	align-items: center;
 	justify-content: flex-end;
-	padding-right: $gap-smaller;
+	padding-right: $gap-large;
 
 	@include breakpoint( '<782px' ) {
 		position: fixed;
